# beautiful-bogus

./: README.md  setup.cfg  tox.ini
bogus/: __init__.py  emulator.py
bogus/appliances/: hephy_brandbox.py  keithley_2410.py  keithley_2470.py  marzhauser_tango.py
tests/: __init__.py  test_emulator.py  test_hephy_brandbox.py  test_keithley_2410.py  test_keithley_2470.py  test_marzhauser_tango.py
