[metadata]
name = bogus
version = attr: bogus.__version__
author = Bernhard Arnold
author_email = bernhard.arnold@oeaw.ac.at
description = Instrument emulation/simulation
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3

[options]
packages = find:
install_requires =

[options.packages.find]
exclude = tests
